# python-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  copier.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  question.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.md
template/: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml  pyproject.toml.jinja
template/.github/: PULL_REQUEST_TEMPLATE.md
template/.github/ISSUE_TEMPLATE/: feature_request.md
template/.github/workflows/: ci.yml  ci.yml.jinja
template/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.md.jinja  SECURITY.md
template/src/{{ package_name }}/: __main__.py
tests/: commands_test.py  conftest.py  template_test.py
